--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-<title>Homepage - Techium</title>
-<a href="./favicon.ico" type="image/x-icon" rel="icon"></a>
-<a href="./favicon.png" type="image/png" rel="icon"></a>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    
+    <!-- Content of your page goes here -->
 </body>
 </html>
