--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -47,12 +47,15 @@
         <section>
             <h2>Latest news</h2>
             <article>
-                <h3>Hoc locotenere se Triaius non potuit.</h3>
+                <h3>Hoc loco tenere se Triarius non potuit.</h3>
             </article>
             <article>
-                <h3>Ut aliosomittam, hunc appello, auem illw unum secutus est.</h3>
+                <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
             </article>
-            <article>Bestiarumvero nullum iudicium puto.</article>
+            <article>
+                <h3>Bestiarum vero nullum iudicium puto.
+                </h3>
+            </article>
         </section>
         <section>
             <h2>Testimonials</h2>
