--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -49,11 +49,11 @@
                     </header>
                     <div>
                         <h3><a href="#">Design & Concept</a></h3>
-                        <h3><a href="#"></a><h3>Digital Strategy</a></h3>
+                        <h3><a href="#">Digital Strategy</a></h3>
                         <h3><a href="#">Content Strategy</a></h3>
                         <h3><a href="#">UX Design</a></h3>
                         <h3><a href="#">Web Development</a></h3>
-                        <h3><a href="#">Social Media</a></h3> 
+                        <h3><a href="#">Social Media</a></h3>    
                     </div>                    
                 </div>
             </section>
@@ -93,8 +93,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>How we work</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>    
-                    </div> 
-                    <a href="about.html">Learn more about us</a>                       
+                    </div>
+                    <a href="about.html">Learn more about us</a>                        
                 </div>
             </section>
             <br>
@@ -148,8 +148,8 @@
                     </header>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p> 
-                    </div>
-                    <a href="contact.html">Get in touch</a>                    
+                    </div>                       
+                    <a href="contact.html">Get in touch</a>
                 </div>                
             </section>
         </main>
