--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -16,7 +16,8 @@
                 <div>
                     <a href="/"><span>Techium</span></a> 
                 </div>                                
-                <nav><ul>
+                <nav>
+                    <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#works">Works</a></li>
