--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -134,19 +134,26 @@
                         <p>We are more than a digital company</p>    
                     </header>
                     <div>
-                        <article >
-                            <p>in the Testimonials section
-                                in the first article
-                                replace the text with a blockquote with text I am completely blown away. Thanks to Techium, we've just launched our 5th website! and cite author Yuri Y.</p>
-                                <cite>Yuri Y.</cite>
+                        <article>
+                            <blockquote>
+                                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                                    <cite>Yuri Y.</cite>
+                                </p>
+                            </blockquote>
                         </article>
                         <article>
-                            <p>Thank you so much for your help. Techium company is awesome! and cite author Dorrie S.</p>
-                            <cite>Dorrie S.</cite>
+                            <blockquote>
+                                <p>Thank you so much for your help. Techium company is awesome!
+                                    <cite>Dorrie S.</cite>
+                                </p>
+                            </blockquote>
                         </article>
                         <article>
-                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
-                            <cite>Sven H.</cite>
+                            <blockquote>
+                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                                    <cite>Sven H.</cite>
+                                </p>
+                            </blockquote>
                         </article>        
                     </div>                    
                 </div>                
@@ -181,8 +188,8 @@
             <div>
                 <ul>
                     <li><a href="#">Terms of Use</a></li>
-                    <li><a href="#"></a>Privacy Policy</li>
-                    <li><a href="#"></a>Cookie Policy</li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
                 </ul>
             </div>
         </footer>
