--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -98,9 +98,7 @@
                     <h2>Typography</h2>
                 </header>
                 <div>
-                    <p>320 Stewart Avenue, Unit <br>
-                    New York City NY <br>
-                    10001</p>
+                    <address>320 Stewart Avenue, Unit 12 <br> New York City NY 10001</address>
                     <div>
                         <pre>
                             <code>
